--- a/test/src/index.html
+++ b/test/src/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html>
+  <head>
+    <!-- build:system-->
+    <script src="../jspm_packages/system.js"></script>
+    <script src="../config.js"></script>
+    <script>SystemJS.import("./index.js");</script>
+    <!-- endbuild-->
+  </head>
+  <body>
+    <div>
+      <p>Hi</p><i class="fa fa-user"></i>
+    </div>
+    <!-- build:bundle-->
+    <!-- endbuild-->
+  </body>
 </html>
